// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications API Can add notification 1: [body] 1`] = `
Object {
  "notifications": Array [
    Object {
      "custom": true,
      "dismissible": true,
      "id": "59a952be7d79ed06b0d21133",
      "location": "bottom",
      "message": "test notification",
      "status": "alert",
      "type": "info",
    },
  ],
}
`;

exports[`Notifications API Can add notification 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "167",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": "http://127.0.0.1:2369/ghost/api/admin/notifications/59a952be7d79ed06b0d21133/",
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Notifications API Can delete notification 1: [body] 1`] = `
Object {
  "notifications": Array [
    Object {
      "custom": true,
      "dismissible": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "location": "bottom",
      "message": "test notification",
      "status": "alert",
      "type": "info",
    },
  ],
}
`;

exports[`Notifications API Can delete notification 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "167",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/notifications\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Notifications API Can delete notification 3: [body] 1`] = `Object {}`;

exports[`Notifications API Can delete notification 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin",
  "x-powered-by": "Express",
}
`;

exports[`Notifications API Can delete notification 5: [body] 1`] = `
Object {
  "notifications": Array [
    Object {
      "custom": true,
      "dismissible": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "location": "bottom",
      "message": "test notification",
      "status": "alert",
      "type": "info",
    },
  ],
}
`;

exports[`Notifications API Can delete notification 6: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "167",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
